--- a/website/public/locales/en/leaderboard.json
+++ b/website/public/locales/en/leaderboard.json
@@ -1,18 +1,33 @@
 {
+  "accepted": "↪ Accepted",
+  "accepted_prompts": "Accepted prompts",
   "daily": "Daily",
+  "day": "Day",
+  "good_rankings": "Good rankings",
   "label": "Labels",
+  "labels_full": "Labels (full)",
+  "labels_simple": "Labels (simple)",
   "last_updated_at": "Last updated at: {{val, datetime}}",
   "leaderboard": "Leaderboard",
+  "month": "Month",
   "monthly": "Monthly",
   "next": "Next",
   "overall": "Overall",
   "previous": "Previous",
   "prompt": "Prompts",
   "rank": "Rank",
+  "rankings": "Rankings",
+  "replies_assistant": "Replies as Assistant",
+  "replies_prompter": "Replies as Prompter",
   "reply": "Replies",
+  "reply_ranked_1": "Replies ranked first",
   "score": "Score",
   "top_5_contributors_today": "Top 5 Contributors Today",
+  "total": "Total",
   "user": "User",
   "view_all": "View all",
-  "weekly": "Weekly"
+  "week": "Week",
+  "weekly": "Weekly",
+  "your_account": "Your account",
+  "your_stats": "Your statistics"
 }
